# justserpapi-python

./: .gitignore  README.md  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: auto-commit.yml  generate.yml  python.yml  release.yml  sync-readme-openapi.yml  validate.yml
config/: sdk-manifest.json
config/generators/: go.json  java.json  python.json
docs/: GoogleAPIApi.md  openapi-governance.md
justserpapi/: __init__.py  _version.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py
justserpapi/api/: google_api_api.py
justserpapi/models/: responses.py
openapi/: README.md
openapi/baseline/: README.md
overlays/go/: README.md.tmpl
overlays/go/.github/workflows/: ci.yml.tmpl  release.yml.tmpl
overlays/java/: README.md.tmpl
overlays/java/.github/workflows/: ci.yml.tmpl  release.yml.tmpl
overlays/python/: README.md.tmpl
overlays/python/.github/workflows/: ci.yml.tmpl  release.yml.tmpl
overlays/python/justserpapi/: __init__.py.tmpl  _version.py
overlays/python/justserpapi/models/: __init__.py  responses.py
scripts/: __init__.py  sdkctl.py  update-readme-api-list.mjs
test/: test_google_api_api.py
tests/: test_client.py  test_examples.py  test_sdkctl.py
tests/fixtures/: breaking-base-openapi.json  breaking-head-openapi.json  sample-openapi.json
