[project]
name = "justserpapi"
version = "1.0.1"
description = "Professional Python SDK for JustSerpAPI"
authors = [
  {name = "JustSerpAPI Team", email = "support@justserpapi.com"},
]
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "JustSerpAPI", "SERP"]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
]

[project.urls]
Homepage = "https://api.justserpapi.com"
Documentation = "https://docs.justserpapi.com"
Repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["justserpapi*"]

[tool.setuptools.package-data]
justserpapi = ["py.typed"]

[tool.mypy]
files = [
  "justserpapi",
  "test",
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
